Classe 'Apresentacao' modelada como controller com seu end-point '/hello-dryve' que mostras algumas informações básicas sobre o projeto em si.
Classe estática 'ParametrosGlobais' modelada como componente Spring e
configuradora-de-propriedades.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# PARÂMETROS QUE RETIRAM O HARD-CODE DA CODIFICAÇÃO JAVA:
+dryve.versaoMaior=0
+dryve.versaoMenor=1
+dryve.versaoCorrecao=0
+dryve.versaoEstagio=dev
+dryve.nomeAplicacao=DRYVE
 
+# CONEXAO COM BANCO DE DADOS:
+
+# COMPORTAMENTO SPRING E HIBERNATE NA GERAÇÃO/MANUTENÇÃO DOS SCHEMAS:
+
+# Outras para debug no console do boot app.
