Endpoint /hello feito com sucesso; Faz leitura de parametros externos no arquivo application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
-# PARÂMETROS QUE RETIRAM O HARD-CODE DA CODIFICAÇÃO JAVA:
-dryve.versaoMaior=0
-dryve.versaoMenor=1
-dryve.versaoCorrecao=0
-dryve.versaoEstagio=dev
-dryve.nomeAplicacao=DRYVE
-
-# CONEXAO COM BANCO DE DADOS:
-
-# COMPORTAMENTO SPRING E HIBERNATE NA GERAÇÃO/MANUTENÇÃO DOS SCHEMAS:
-
-# Outras para debug no console do boot app.
+dryve.global.versao-maior = 0
+dryve.global.versao-menor = 1
+dryve.global.versao-correcao = 0
+dryve.global.versao-estagio = dev
+dryve.global.nome-aplicacao = DRYVE-DESAFIO-1
