Modelagem do dominio de negocio. POJO completo. Próximos passos: adicionar Spring e Hibernate, e testar integração com PostgreSQL.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ dryve.global.versao-menor = 1
 dryve.global.versao-correcao = 0
 dryve.global.versao-estagio = dev
 dryve.global.nome-aplicacao = DRYVE-DESAFIO-1
+spring.datasource.url=jdbc:postgresql://localhost:5432/drive_desafio_1_db?createDatabaseIfNotExist=true&autoReconnect=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=postgres
