Principais classes criadas, e HIBERNATE configurado para ORM; Bando de Dados criado, e tabelas criadas; Próximo passo: criar as constraints 'FK' em nivel de HIBERNATE e refletí-las para o bando de dados, nas tabelas; Só depois iniciar as CLASSES CONTROLLERS com END-POINTS.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
+# Informações para conexão do bando de dados.
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5433/desafio_1?createDatabaseIfNotExist=true&autoReconnect=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+
+# Re-criação automática do schema cada inicialização da apl.
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Parâmetros globais de configuração da aplicação.
 dryve.global.versao-maior = 0
 dryve.global.versao-menor = 1
 dryve.global.versao-correcao = 0
 dryve.global.versao-estagio = dev
 dryve.global.nome-aplicacao = DRYVE-DESAFIO-1
-spring.datasource.url=jdbc:postgresql://localhost:5432/drive_desafio_1_db?createDatabaseIfNotExist=true&autoReconnect=true&useTimezone=true&serverTimezone=UTC
-spring.datasource.username=postgres
-spring.datasource.password=postgres
