Implementação 1º estágio concluída -> classes repositórios e controladoras prontas para o método '.findAll()' do método GET em seus respsctivos end-poist: '/brands', '/models', '/modelsyears', '/motorvehicles'.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,15 @@ spring.datasource.url = jdbc:postgresql://localhost:5433/desafio_1?createDatabas
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 
-# Re-criação automática do schema cada inicialização da apl.
-spring.jpa.show-sql=true
+# Spring Data JPA gera script SQL-DDL para implementar database conforme ORM.
 spring.jpa.generate-ddl = true
+# Re-criação automática do schema em cada inicialização da aplicação.
 spring.jpa.hibernate.ddl-auto = create
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+# Hibernate usar o dialeto correto para melhores detalhes nos scripts SQL-DDL-MDL.
+# Inclusive para gerar tabela com motor InnoDB.
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# Mostrar o SQL executado durante o boot da aplicação no IDE.
+spring.jpa.show-sql=true
 
 # Parâmetros globais de configuração da aplicação.
 dryve.global.versao-maior = 0
@@ -17,3 +20,5 @@ dryve.global.versao-menor = 1
 dryve.global.versao-correcao = 0
 dryve.global.versao-estagio = dev
 dryve.global.nome-aplicacao = DRYVE-DESAFIO-1
+
+#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
