Atualisado as propriedades globais da aplicação sobre a versão da mesma no arquivo application.properties;
Atualizado exibição do método ".helo()";

[TAG v0.1.0-beta]

Signed-off-by: ROPIMASI <ropimasi@email.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,6 @@ spring.jpa.show-sql=true
 dryve.global.versao-maior = 0
 dryve.global.versao-menor = 1
 dryve.global.versao-correcao = 0
-dryve.global.versao-estagio = dev
+dryve.global.versao-estagio = beta
 dryve.global.nome-aplicacao = DRYVE-DESAFIO-1
 
-#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
