--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,32 @@
+# DIREITOS, LICENSA E ISENÇÃO DE RESPONSABILIDADE:
+# Este arquivo é parte integrante, indivisível, inseparável de um projeto particular, o qual tem seu uso expressamente
+# exclusivo à seu autor, Ronaldo Marques (ronaldomarques@email.com / http://ronaldomarques.dev);
+# É vetado qualquer utilização, venda, aluguél, distribuição, em partes ou integral deste projeto;
+# Este projeto tem finalidade exclusiva de demonstração de conhecimento e habilidades no desenvolvimento de software
+# para apresentação no processo de recrutamento da empresa Dryve.com.br;
+# Sendo assim, o autor deste projeto não reconhece nem assume qualquer responsabilidade pela utilização do mesmo,
+# tão pouco por qualquer possível reflexos ou consequência de tal utilização.
+# ---
+# RIGHTS, LICENSE AND DISCLAIMER:
+# This file is an integral, indivisible, inseparable part of a particular project, which has its use expressly
+# exclusive to its author, Ronaldo Marques (ronaldomarques@email.com / http://ronaldomarques.dev);
+# Any use, sale, rental, distribution, in parts or integral of this project is prohibited;
+# This project has the sole purpose of demonstrating knowledge and skills in software development
+# for presentation in the recruitment process of Dryve.com.br;
+# Therefore, the author of this project does not recognize or assume any responsibility for the use of it,
+# neither for any possible reflexes or consequence of such use.
+
+# @author		Ronaldo Marques.
+# @since		20210315.
+# @last_change	20210328.
+# @version		0.2.0.
+# @category		General application properties.
+
+
 # Informações para conexão do bando de dados.
 spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5433/desafio_1?createDatabaseIfNotExist=true&autoReconnect=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.url = jdbc:postgresql://localhost:5433/dryve_challenge_1?createDatabaseIfNotExist=true&autoReconnect=true
+	#&useTimezone=true&serverTimezone=UTC
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 
@@ -15,9 +41,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.show-sql=true
 
 # Parâmetros globais de configuração da aplicação.
-dryve.global.versao-maior = 0
-dryve.global.versao-menor = 1
-dryve.global.versao-correcao = 0
-dryve.global.versao-estagio = beta
-dryve.global.nome-aplicacao = DRYVE-DESAFIO-1
+dryve.global.major-version = 0
+dryve.global.minor-version = 2
+dryve.global.patch-version = 0
+dryve.global.status-version = beta
+dryve.global.application-name = "DRYVE CHALLENGE 1"
 
