@PostMapping completed for BrandEntity, ModelEntity, ModelYearEntity, MotorVehicleEntity.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 
 # @author		Ronaldo Marques.
 # @since		20210315.
-# @last_change	20210328.
+# @last_change	20210329.
 # @version		0.2.0.
 # @category		General application properties.
 
@@ -44,6 +44,6 @@ spring.jpa.show-sql=true
 dryve.global.major-version = 0
 dryve.global.minor-version = 2
 dryve.global.patch-version = 0
-dryve.global.status-version = beta
+dryve.global.status-version = alpha
 dryve.global.application-name = "DRYVE CHALLENGE 1"
 
