All documentation updated.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@
 
 # @author		Ronaldo Marques.
 # @since		20210315.
-# @last_change	20210405.
-# @version		0.2.0.
+# @last_change	20210408.
+# @version		0.2.0-beta
 # @category		General application properties.
 
 
