Starting basics concepts of DTO and SERVICES for correct action to save in the controller.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 
 # @author		Ronaldo Marques.
 # @since		20210315.
-# @last_change	20210408.
+# @last_change	20210409.
 # @version		0.2.0-beta
 # @category		General application properties.
 
@@ -35,8 +35,9 @@ spring.jpa.generate-ddl = true
 # Re-criação automática do schema em cada inicialização da aplicação.
 spring.jpa.hibernate.ddl-auto = create
 # Hibernate usar o dialeto correto para melhores detalhes nos scripts SQL-DDL-MDL.
-# Inclusive para gerar tabela com motor InnoDB.
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# Inclusive para gerar tabela com motor InnoDB, para isso usar o Dialect adequado.
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 # Mostrar o SQL executado durante o boot da aplicação no IDE.
 spring.jpa.show-sql=true
 
