--- a/src/main/resources/dryvechallenge1.properties
+++ b/src/main/resources/dryvechallenge1.properties
@@ -1,11 +1,11 @@
-# DIREITOS, LICENSA E ISEN«√O DE RESPONSABILIDADE:
-# Este arquivo È parte integrante, indivisÌvel, insepar·vel de um projeto particular, o qual tem seu uso expressamente
-# exclusivo ‡ seu autor, Ronaldo Marques (ronaldomarques@email.com / http://ronaldomarques.dev);
-# … vetado qualquer utilizaÁ„o, venda, aluguÈl, distribuiÁ„o, em partes ou integral deste projeto;
-# Este projeto tem finalidade exclusiva de demonstraÁ„o de conhecimento e habilidades no desenvolvimento de software
-# para apresentaÁ„o no processo de recrutamento da empresa Dryve.com.br;
-# Sendo assim, o autor deste projeto n„o reconhece nem assume qualquer responsabilidade pela utilizaÁ„o do mesmo,
-# t„o pouco por qualquer possÌvel reflexos ou consequÍncia de tal utilizaÁ„o.
+# DIREITOS, LICENSA E ISEN√á√ÉO DE RESPONSABILIDADE:
+# Este arquivo √© parte integrante, indivis√≠vel, insepar√°vel de um projeto particular, o qual tem seu uso expressamente
+# exclusivo √† seu autor, Ronaldo Marques (ronaldomarques@email.com / http://ronaldomarques.dev);
+# √â vetado qualquer utiliza√ß√£o, venda, alugu√©l, distribui√ß√£o, em partes ou integral deste projeto;
+# Este projeto tem finalidade exclusiva de demonstra√ß√£o de conhecimento e habilidades no desenvolvimento de software
+# para apresenta√ß√£o no processo de recrutamento da empresa Dryve.com.br;
+# Sendo assim, o autor deste projeto n√£o reconhece nem assume qualquer responsabilidade pela utiliza√ß√£o do mesmo,
+# t√£o pouco por qualquer poss√≠vel reflexos ou consequ√™ncia de tal utiliza√ß√£o.
 # ---
 # RIGHTS, LICENSE AND DISCLAIMER:
 # This file is an integral, indivisible, inseparable part of a particular project, which has its use expressly
@@ -22,7 +22,7 @@
 # @version		0.2.0-beta
 # @category		General application properties.
 
-# Par‚metros globais de configuraÁ„o da aplicaÁ„o, especificamente para: "Dryve Challenge 1".
+# Par√¢metros globais de configura√ß√£o da aplica√ß√£o, especificamente para: "Dryve Challenge 1".
 dryve.global.major-version = 0
 dryve.global.minor-version = 2
 dryve.global.patch-version = 0
